fixed log in button on mobile

--- a/app/css/landingPageStyles.css
+++ b/app/css/landingPageStyles.css
@@ -223,7 +223,7 @@ body {
     padding-bottom: 50px;
   }
   .logIn {
-    margin-left: 70%;
+    margin-left: 63%;
     margin-right: 15%;
   }
   .signUpSlogan {
